--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,47 @@
+/*
+* --------------------------------------------
+* Custom styles to override the default Bootstrap ones
+* --------------------------------------------
+*/
 
+/* New Color Palette:
+* Lightest (Text):         #dfdfdf      (text, contrast with dark)
+* Dark Green (Primary):    #202020      
+* Light Green (Secondary): #9f9f9f      (canvas background)
+* Reddish-Brown (Accent):  #606060
+*/
+
+.bg-info {
+    background-color: #9f9f9f !important;
+    /* Light green for secondary backgrounds */
+}
+
+.navbar-light .navbar-brand, .navbar-light .navbar-nav .nav-link {
+    color: #202020;
+    /* Dark green for brand name & nav links for visibility */
+}
+
+.btn-info {
+    color: #dfdfdf;
+    /* Lightest shade for text on info button for contrast */
+    background-color: #9f9f9f;
+    /* Light green for button background */
+    border-color: #202020;
+    /* Dark green for button border */
+}
+
+.btn-primary {
+    color: #dfdfdf;
+    /* Lightest shade for text */
+    font-size: 150%;
+    background-color: #202020;
+    /* Dark green for primary button background */
+    border-color: #606060;
+    /* Reddish-brown for border to use as accent */
+    border-width: thick;
+}
+
+body {
+    background-color: #dfdfdf;
+    /* Lightest shade for body background to follow the 60% rule */
+}
