--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,28 @@
     /* Reddish-brown for border to use as accent */
     border-width: thick;
 }
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+.hero-text button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: black;
+  background-color: #ddd;
+  text-align: center;
+  cursor: pointer;
+}
+.hero-text button:hover {
+  background-color: #555;
+  color: white;
+}
 
 body {
     background-color: #dfdfdf;
