--- a/styles/style.css
+++ b/styles/style.css
@@ -65,5 +65,7 @@
 
 body {
     background-color: #dfdfdf;
-    /* Lightest shade for body background to follow the 60% rule */
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
