added index.html and login.html
renamed CuisineConnect.html to main.html

added firebase login and its required JS files

sign-in dependant navbar and footer still need to be worked on

--- a/styles/style.css
+++ b/styles/style.css
@@ -69,3 +69,15 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.responsive {
+  width: 100%;
+  height: auto;
+}
+
+.rounded-circle {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  /* Centers the circle horizontally */
+}
