--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@
 
 body {
   background-color: #dfdfdf;
-  height: 100%;
+  height: 1500px;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -87,7 +87,7 @@ body {
 
 /* Add CSS styles for the card container with vertical scrolling */
 .card-container {
-  max-height: 350px;
+  max-height: auto;
   /* Adjust the maximum height as needed */
   overflow-y: auto;
 }
