few features added and refactor
- renamed saved.html to profile.html
- added profile customization functionality
- updated most of the front-end to make it look better (button changes and overflow fixes)

--- a/styles/style.css
+++ b/styles/style.css
@@ -87,10 +87,9 @@ body {
 
 /* Add CSS styles for the card container with vertical scrolling */
 .card-container {
-  max-height: 500px;
+  max-height: auto;
   /* Adjust the maximum height as needed */
   overflow-y: auto;
-  overflow-x: none;
 }
 
 /* Style the individual cards as needed */
