--- a/styles/style.css
+++ b/styles/style.css
@@ -4,30 +4,22 @@
 * --------------------------------------------
 */
 
-/* New Color Palette:
-* Lightest (Text):         #dfdfdf      (text, contrast with dark)
-* Dark Green (Primary):    #202020      
-* Light Green (Secondary): #9f9f9f      (canvas background)
-* Reddish-Brown (Accent):  #606060
-*/
-
 .bg-info {
-  background-color: #fd7702 !important;
-  /* Light green for secondary backgrounds */
+  background-color: #FFC90E !important;
 }
 
 .navbar-light .navbar-brand, .navbar-light .navbar-nav .nav-link {
   color: #202020;
-  /* Dark green for brand name & nav links for visibility */
+  /* Dark grey for brand name & nav links for visibility */
 }
 
 .btn-info {
   color: #dfdfdf;
   /* Lightest shade for text on info button for contrast */
   background-color: #9f9f9f;
-  /* Light green for button background */
+  /* Lighter grey for button background */
   border-color: #202020;
-  /* Dark green for button border */
+  /* Dark grey for button border */
 }
 
 .btn-primary {
@@ -35,9 +27,9 @@
   /* Lightest shade for text */
   font-size: 150%;
   background-color: #202020;
-  /* Dark green for primary button background */
+  /* Dark grey for primary button background */
   border-color: #606060;
-  /* Reddish-brown for border to use as accent */
+  /* grey for border to use as accent */
   border-width: thick;
 }
 
@@ -99,6 +91,7 @@ body {
   margin: 2%;
   /* Add margin between cards */
 }
+
 /* Tooltip styling */
 .tooltip {
   position: absolute;
@@ -118,6 +111,7 @@ body {
   position: relative;
   cursor: pointer;
 }
+
 .material-icons:hover {
   cursor: pointer;
 }
